@@ -1,3 +1,14 @@
+1998-12-09  Tom Tromey  <tromey@cygnus.com>
+
+	* gnu/testlet/java/lang/Character/to.java: Added test to find
+	titlecase of titlecase character.
+
+1998-12-08  Tom Tromey  <tromey@cygnus.com>
+
+	* gnu/testlet/SimpleTestHarness.java (runtest): Now protected.
+	(done): Likewise.
+	(SimpleTestHarness): Likewise.
+
 1998-12-08  Anthony Green  <green@cygnus.com>
 
 	* choose: JAVA2 and JDK1.2 are synonymous.
